2002-01-26  Koichi INOUE  <inoue@argv.org>

	* Initialization: emacspeak-m17n-setup is now not loaded
	automatically.
	After loading emacspeak-setup, you should load
	emacspeak-m17n-setup yourself or by emacspeak-startup-hook.

2002-01-23  Koichi INOUE  <inoue@argv.org>

	* Prepared for public test.

2002-01-21  Koichi INOUE  <inoue@argv.org>

	* Import. Diff files from Emacspeak CVS development at
	:pserver:anonymous@cvs.emacspeak.sourceforge.net:/cvsroot/emacspeak

	For developers: execute devel/prepare-cvs from *this* directory
	to incorporate changed files from your development directory.
	Add newly changed file to devel/diff.lst.
	Read devel/prepare-cvs script for details.